--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1> Hello world from ejs file</h1>
+    <h1> Hello</h1>
 
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
