--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -19,7 +19,7 @@
 
     <script>
       var chatbox = document.getElementById('fb-customer-chat');
-      chatbox.setAttribute("page_id", "100544959164023");
+      chatbox.setAttribute("page_id", "103203358539976");
       chatbox.setAttribute("attribution", "biz_inbox");
     </script>
 
@@ -36,7 +36,7 @@
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
         js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     </script>
